Correcciones en la auditoría
- Se elimina el uso de la propiedad de volcado en base de datos.
- Se simplifican las clases de registro.
- Se modifican algunas de las llamadas de registro de auditoría.
- Corrección de comentarios.
- Ahora las conexiones de BD del módulo de estadísticas y auditoría se realiza mediante las clases del core del componente central para evitar que se creeen más conexiones de las esperadas.